--- a/src/assets/template/css/modules/_catalog.scss
+++ b/src/assets/template/css/modules/_catalog.scss
@@ -19,6 +19,7 @@
         }
     }
     &__content{
+        width: 100%;
         @media ($bp-larger-than-desktop) {
             padding-left: 15px;
             padding-right: 15px;
