--- a/src/assets/template/html/region-one.html
+++ b/src/assets/template/html/region-one.html
@@ -37,53 +37,55 @@
 
                     <div class="separator"><div class="separator__icon"></div></div>
 
-                    <div class="main-services__header">
-                        Ритуальные товары и услуги
-                    </div>
-                    <div class="main-services__grid">
-                        <div class="main-services__item">
-                            <a href="#" class="service-block service-block--burial">
-                                <div class="service-block__caption">
-                                    <span class="service-block__title">Захоронение</span>
-                                    <div class="service-block__cost">от 16 790 рублей</div>
-                                </div>
-                            </a>
+                    <div class="region-service">
+                        <div class="main-services__header">
+                            Ритуальные товары и услуги
                         </div>
-                        <div class="main-services__item">
-                            <a href="#" class="service-block service-block--place">
-                                <div class="service-block__caption">
-                                    <span class="service-block__title">Место на кладбище</span>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="main-services__item">
-                            <a href="#" class="service-block service-block--calc">
-                                <div class="service-block__caption">
-                                    <span class="service-block__title">Калькулятор похорон</span>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="main-services__item">
-                            <a href="#" class="service-block service-block--cremation2">
-                                <div class="service-block__caption">
-                                    <span class="service-block__title">Кремация</span>
-                                    <div class="service-block__cost">от 21 560 рублей</div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="main-services__item">
-                            <a href="#" class="service-block service-block--200">
-                                <div class="service-block__caption">
-                                    <span class="service-block__title">Груз 200</span>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="main-services__item">
-                            <a href="#" class="service-block service-block--posobie">
-                                <div class="service-block__caption">
-                                    <span class="service-block__title">Льготы и пособия</span>
-                                </div>
-                            </a>
+                        <div class="main-services__grid">
+                            <div class="main-services__item">
+                                <a href="#" class="service-block service-block--burial">
+                                    <div class="service-block__caption">
+                                        <span class="service-block__title">Захоронение</span>
+                                        <div class="service-block__cost">от 16 790 рублей</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="main-services__item">
+                                <a href="#" class="service-block service-block--place">
+                                    <div class="service-block__caption">
+                                        <span class="service-block__title">Место на кладбище</span>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="main-services__item">
+                                <a href="#" class="service-block service-block--calc">
+                                    <div class="service-block__caption">
+                                        <span class="service-block__title">Калькулятор похорон</span>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="main-services__item">
+                                <a href="#" class="service-block service-block--cremation2">
+                                    <div class="service-block__caption">
+                                        <span class="service-block__title">Кремация</span>
+                                        <div class="service-block__cost">от 21 560 рублей</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="main-services__item">
+                                <a href="#" class="service-block service-block--200">
+                                    <div class="service-block__caption">
+                                        <span class="service-block__title">Груз 200</span>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="main-services__item">
+                                <a href="#" class="service-block service-block--posobie">
+                                    <div class="service-block__caption">
+                                        <span class="service-block__title">Льготы и пособия</span>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </div>
 
@@ -112,7 +114,7 @@
                                     <p>Для похорон на родственном участке понадобятся паспорт отвечающего за место либо доверенность от него, паспорт погребения, гербовое свидетельство на покойного и о смерти людей, уже находящихся здесь. Также понадобятся бумаги, которые подтвердят родство умершего с погребенными на участке. Наш ритуальный агент поможет вам собрать все необходимые для захоронения документы.                                    </p>
 
                                     <div class="agent-docs">
-                                            <div class="header2">Образцы получаемых документов</div>
+                                            <div class="agent-docs__header">Образцы получаемых документов</div>
                                             <div class="agent-docs__row">
                                                 <div class="agent-docs__item">
                                                     <div class="agent-docs__card">
@@ -216,61 +218,6 @@
 
                     
 
-                    <div class="separator"><div class="separator__icon"></div></div>
-
-                    <h2>ПЕРЕЧЕНЬ ОБЯЗАННОСТЕЙ И УСЛУГИ  РИТУАЛЬНОГО АГЕНТА</h2>
-
-                    <ul class="mdash">
-                        <li>Бесплатный  выезд за 40 минут  в любой район Москвы и Московской области - позволяет экономить время и переживание</li>
-                        <li>Составление сметы на похоронные товары - гарантирует возможность предварительно рассчитать предстоящие расходы </li>
-                        <li>Контроль выдачи тела в морге и сопровождение на кладбище, при этом агент компании присутствует на каждом этапе транспортировки тела</li>
-                        <li>Сбор необходимых документов для захоронения и получения льгот</li>
-                        <li>Получение свидетельства о смерти и справки на получение социального пособия (форма - 33)</li>
-                        <li>Заказ кремации и подготовка к ней</li>
-                        <li>Заказ муниципального захоронения</li>
-                        <li>Заказ и организация поминального обеда</li>
-                        <li>Организация отпевания и панихиды</li>
-                        <li>Предоставление специального транспорта и составление маршрута похорон</li>
-                        <li>Защита от «черных» похоронных агентов</li>
-                    </ul>
-
-                    <div class="header2">РИТУАЛЬНЫЙ АГЕНТ «МФЦ-РИТУАЛ»</div>
-
-                    <p>При организации процесса похорон по поручениям родственников умершего работают специальные сотрудники «МФЦ-Ритуал» – ритуальные агенты в Москве и Московской области. Это высококвалифицированные и опытные специалисты. Они знают все нюансы сферы ритуальных услуг, от их грамотной работы зависит, насколько чётко и быстро будут организованы похоронные мероприятия. Обратившись за услугами похоронных агентов «МФЦ-Ритуал», вы избежите лишних трат, нервотрепки, сэкономите время. Мы считаем, что в современных условиях похоронами должен заниматься ритуальный агент, только он сможет организовать все необходимые процедуры быстрее и лучше родственников.</p>
-                    <h3>Какие обязанности возьмет на себя наш ритуальный агент?</h3>
-                    <p>Мы можем без ложной скромности сказать, что в «МФЦ-Ритуал» работают лучшие похоронные агенты Москвы. Они смогут провести похоронные ритуалы любой сложности и уровня, от скромного погребения, когда попрощаться с покойным придут только самые близкие люди, до пышных и  недорогих похорон.</p>
-                    <h3>Профессиональные качества похоронных агентов</h3>
-                    <p>Согласно столичным законам, все ритуальные агенты в Москве должны получить аккредитацию. В «МФЦ-Ритуал» работают только аккредитованные специалисты, досконально изучившие тонкости своего нелегкого, но, увы, необходимого людям ремесла. Они строго придерживаются этических норм и неписаных правил работников ритуальной службы. Агенты прошли профессиональное обучение и ежегодно посещают специальные курсы повышения квалификации.</p>
-                    <p>Ведь каждый опытный ритуальный агент это, во многих отношениях, тонкий психолог и даже философ. В ритуальном бизнесе могут надолго задержаться только чуткие к чужому горю и, в то же время, психологически устойчивые люди. Наши агенты умеют слушать и слышат людей, они аккуратны и ответственны. Всегда сообщают родственникам обо всех положенных по закону льготах и государственных выплатах, подробно консультируют о порядке их получения, если будет нужно, займутся сопутствующими бюрократическими и организационными хлопотами, включая организацию поминальной трапезы и религиозных обрядов.</p>
-                    <p>Агент похоронных услуг «МФЦ-Ритуал» настоящий профессионал и приложит все усилия, чтобы лишний стресс не коснулся родных и близких покойного. Также о каждом сотруднике Вы можете ознакомится с <a href="#">отзывами</a>.</p>
-
-                    <div class="separator"><div class="separator__icon"></div></div>
-
-                    <h2>Похоронный агент обязан:</h2>
-
-                    <ul class="mdash">
-                        <li><span class="bold">Организовать процесс похорон в соответствии с этикой и традициями погребального обряда.</span><br />
-                            Каждый специалист нашей службы хорошо знает, как гражданские, так и религиозные аспекты похоронных ритуалов. При выполнении заказа по похоронам обязательно учитываются национальные традиции разных народов, проживающих в нашей стране. Соблюдение обрядов помогает исполнить волю покойного, проявить уважение к чувствам родственников.</li>
-                        <li><span class="bold">Проконсультировать заказчиков по всем вопросам, связанным с похоронами.</span><br />
-                            Для большинства граждан  процесс организации похорон – дело малознакомое. Человеку, только что потерявшему кого-то из родных, трудно собраться с силами и проанализировать ситуацию. А ведь предстоит за короткое время решить массу проблем, связаться со службами и организациями, приобрести все необходимое. Погребение или кремация, проведение религиозных обрядов, оформление документов на захоронение, выбор кладбища, заказ поминального обеда и многие другие детали волнуют родственников и требуют разъяснений. Ритуальный агент хорошо подготовлен и может предоставить исчерпывающую информацию по данным вопросам.</li>
-                        <li><span class="bold">Обсудить с клиентами предстоящие траурные услуги и мероприятия, составить их список и оформить договор на предоставление услуг.</span><br />
-                            Агент рассказывает заказчикам обо всех возможностях нашей службы, информирует о расценках, вместе с клиентом планирует ритуальные мероприятия. Наши специалисты возьмут на себя все обязанности по проведению похорон, чтобы близкие усопшего могли сосредоточиться на своих чувствах и достойно проводить его в последний путь.</li>
-                    </ul>
-
-                    <p>Когда в дом приходит беда, сложно сосредоточиться, отвлечься от переживаний и заняться насущными делами. В этот горестный момент родственникам усопшего требуется поддержка – прежде всего, помощь в организации процесса похорон.</p>
-                    <p>Государственный ритуальный агент представляет нашу службу и берет на себя все обязательства по оказанию ритуальных услуг. Это  проведение похорон, оформление документов, консультационная помощь. Важнейшим аспектом работы ритуального агента является моральная поддержка людей, потерявших близкого. В минуту тяжелой утраты очень нужно, чтобы рядом оказался человек, который четко, профессионально организует траурные мероприятия. Самим своим присутствием, корректной работой ритуальный агент утешает и успокаивает, вселяя уверенность, что похороны пройдут достойно.</p>
-
-                    <div class="separator"><div class="separator__icon"></div></div>
-
-                    <p class="danger">Просим вас проявлять бдительность!</p>
-                    <p>В последнее время участились случаи, когда под видом представителей ритуальной службы скрываются мошенники, которые пользуются растерянностью и подавленностью людей в своих корыстных целях. Чтобы не стать их жертвой, пожалуйста, проверьте следующие документы:</p>
-
-                    <ul class="mdash">
-                        <li>удостоверение ритуального агента</li>
-                        <li>квитанция-договор по форме ПП РФ 26.05.2008 номер 359</li>
-                        <li>прейскурант ритуальной службы с печатью и подписью руководителя</li>
-                    </ul>
-
 				</div>
 				<div class="single-page__sidebar">
                     
@@ -350,12 +297,69 @@
                         </div>
                     </div>
 
+                    <div class="sidebar-advantages">
+                        <div class="sidebar-advantages__header">Преимущества МФЦ-Ритуал</div>
+                        <div class="sidebar-advantages__items">
+                            <div class="sidebar-advantages__item sidebar-advantages__item--experience">
+                                <div class="sidebar-advantages__title">Опыт</div>
+                                <div class="sidebar-advantages__intro">Мы занимаемся организацией похорон в Москве уже больше 10 лет и знаем все подводные камни</div>
+                                <div class="sidebar-experience">
+                                    <div class="sidebar-experience__years">11</div>
+                                    <div class="sidebar-experience__text">лет</div>
+                                </div>
+                            </div>
+                            <div class="sidebar-advantages__item">
+                                <div class="sidebar-advantages__title">Корректность</div>
+                                <div class="sidebar-advantages__intro">Наши сотрудники максимально корректно для родственников и близких покойного человека возьмут на себя все заботы по организации и проведению траурного мероприятия</div>
+                            </div>
+                            <div class="sidebar-advantages__item">
+                                <div class="sidebar-advantages__title">Защита от «черных похоронных агентов»</div>
+                                <div class="sidebar-advantages__intro">Распорядитель ритуальной службы МФЦ-Ритуал защитит вас от любых схем обмана при взаимодействии с сотрудниками служб экстренного вызова, моргов, кладбищ и колумбариев</div>
+                            </div>
+                            <div class="sidebar-advantages__item">
+                                <div class="sidebar-advantages__title">Пунктуальность</div>
+                                <div class="sidebar-advantages__intro">В похоронном деле не может быть задержек. У нас не бывает сбоев – инфраструктура предприятия позволяет нам проводить 20 траурных церемоний в день строго по графику</div>
+                            </div>
+                        </div>
+                    </div>
+
 
 				</div>
-			</div>
+            </div>
+
+            <div class="separator"><div class="separator__icon"></div></div>
+
+            <div class="region-contacts">
+                <div class="main-contacts__grid">
+                    <div class="main-contacts__content">
+                        <div class="main-contacts__header">
+                            Наши контакты
+                        </div>
+                        <div class="main-contacts__subheader">
+                            Свяжитесь удобным для вас способом
+                        </div>
+                        <div class="main-contacts__list">
+                            <div class="main-contacts__item main-contacts__item--phone">
+                                <a href="tel:#">+7 495 532-88-62 </a>
+                            </div>
+                            <div class="main-contacts__item main-contacts__item--email">
+                                <a href="tel:#">info@mfc-ritual.ru</a>
+                            </div>
+                            <div class="main-contacts__item main-contacts__item--address">
+                                Москва<br />
+                                2-я Мелитопольская, д. 4Б
+                            </div>
+                        </div>
+                    </div>
+                    <div class="main-contacts__map">
+                        <div id="map"></div>
+                    </div>
+                </div>
+            </div>
+
 		</div>
     </div>
     
 
-
+//= include/mediahelp.html
 //= include/footer.html
