--- a/src/assets/template/css/modules/_agent.scss
+++ b/src/assets/template/css/modules/_agent.scss
@@ -18,6 +18,11 @@
           margin-bottom: 0;
         }
     }
+    &__header{
+      font-size: 18px;
+      font-weight: bold;
+      margin-bottom: 25px;
+    }
     .header2{
         margin-top: 25px;
         margin-bottom: 26px;
@@ -84,6 +89,9 @@
     border-radius: 14px;
     padding: 25px 15px 18px 15px;
     margin-bottom: 37px;
+    max-width: 360px;
+    margin-left: auto;
+    margin-right: auto;
     @media ($bp-larger-than-tablet) {
       padding: 25px 27px 18px 30px;
     }
