--- a/src/assets/template/css/modules/_region-one.scss
+++ b/src/assets/template/css/modules/_region-one.scss
@@ -23,7 +23,7 @@
     background-size: cover;
     display: block;
     overflow: hidden;
-    margin-bottom: 30px;
+    margin-bottom: 44px;
     @media ($bp-larger-than-tablet) {
       display: block;
       
@@ -35,6 +35,10 @@
       left: 8px;
       bottom: 0px;
       @include sprite($icon-employee-big);
+      @media ($bp-larger-than-desktop) {
+        left: 14px;
+        bottom: -19px;
+      } 
       @media ($bp-larger-than-desktophd) {
         left: 24px;
         bottom: -9px;
@@ -117,12 +121,16 @@
         padding: 22px 75px 22px 22px; 
         font-weight: 900;
         text-transform: uppercase;
-        font-size: 18px;
+        font-size: 16px;
         position: relative;
         display: block;
         text-decoration: none;
         color: #222222;
         transition: $anim;
+        outline: none;
+        @media ($bp-larger-than-desktop) {
+            font-size: 18px; 
+        } 
         &:hover{
             color: #222222;
             background-color: #d1dbe4;
@@ -136,7 +144,7 @@
             @include sprite($accordeon-arrow);
             position: absolute;
             top: 50%;
-            right: 25px;
+            right: 32px;
             transform: translateY(-50%);
             transition: $anim;
         }
@@ -144,4 +152,143 @@
     &__body{
         display: none;
     }
+    .agent-docs{
+        padding-top: 25px;
+        margin-bottom: 36px;
+    }
 }
+
+
+
+.sidebar-advantages{
+    padding: 45px 0 5px;
+    @media ($bp-larger-than-desktop) {
+      padding: 45px 0 0px;
+      display: block;
+    }
+    &__header{
+      font-size: 16px;
+      font-weight: 900;
+      line-height: 120%;
+      margin-bottom: 36px;
+      text-transform: uppercase;
+      @media ($bp-larger-than-desktop) {
+        font-size: 18px;
+        line-height: 110%;
+        margin-bottom: 36px;
+      }
+    }
+    &__info{
+      margin-bottom: 14px;
+      font-size: 14px;
+      @media ($bp-larger-than-desktop) {
+        font-size: 18px;
+        margin-bottom: 28px;
+      }
+      p {
+        color: #444;
+        line-height: 130%;
+        font-size: 14px;
+        @media ($bp-larger-than-desktop) {
+          font-size: 18px;
+        }
+      }
+    }
+    &__grid{
+      margin-top: 28px;
+      margin-bottom: 8px;
+      @media ($bp-larger-than-tablet) {
+        margin-top: 24px;
+        display: flex;
+        margin-left: -15px;
+        margin-right: -15px;
+        margin-bottom: 8px;
+        flex-wrap: wrap;
+      }
+      @media ($bp-larger-than-desktop) {
+        flex-wrap: nowrap;
+      }
+    }
+    &__items{
+
+    }
+    &__item{
+      margin-bottom: 25px;
+      position: relative;
+      @media ($bp-larger-than-desktop) {
+        margin-bottom: 26px;
+      }
+      &--experience{
+        padding-left: 120px;
+      }
+      +.sidebar-advantages__iten{
+        margin-top: 25px;
+        @media ($bp-larger-than-desktop) {
+            margin-top: 30px;
+        }
+      }
+    }
+    &__title{
+        font-weight: 900;
+        margin-bottom: 8px;
+        font-size: 18px;
+        text-align: left;
+        padding: 0;
+        line-height: 120%;
+    }
+    &__intro{
+      font-size: 15px;
+      color: #444;
+      line-height: 135%;
+    }
+  }
+
+  .region-contacts{
+      padding-top: 32px;
+  }
+  .region-service{
+      padding-top: 20px;
+      .main-services__header{
+        font-size: 21px;
+        margin-bottom: 20px;
+        @media ($bp-larger-than-desktop) {
+            margin-bottom: 32px;
+            font-size: 35px;
+        }
+      }
+  }
+
+  .sidebar-experience{
+    position: absolute;
+    transform: scale(0.9);
+    left: -1px;
+    top: -2px;
+    &:before{
+      content: "";
+      display: inline-block;
+      @include sprite($icon-experience);
+      
+    }
+    &__years{
+      position: absolute;
+      top: 5px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-family: Gilroy, sans-serif;
+      color: $blue;
+      font-size: 42px;
+      font-weight: 800;
+      line-height: 100%;
+    }
+    &__text{
+      position: absolute;
+      font-weight: 900;
+      font-size: 20px;
+      top: 37px;
+      left: 50%;
+      color: $blue;
+      transform: translateX(-50%);
+      line-height: 100%;
+      
+    }
+  }
