--- a/src/assets/template/css/modules/_catalog.scss
+++ b/src/assets/template/css/modules/_catalog.scss
@@ -136,6 +136,7 @@
         margin-left: -15px;
         margin-right: -15px;
         flex-wrap: wrap;
+        margin-bottom: 40px;
     }
     &__item{
         padding-left: 15px;
@@ -167,6 +168,8 @@
         justify-content: center;
         img{
             max-width: 100%;
+            max-height: 170px;
+
         }
     }
     &__name{
